<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/fh_background" android:paddingStart="@dimen/screen_padding_horizontal" android:paddingTop="@dimen/space_16" android:paddingEnd="@dimen/screen_padding_horizontal">
    <ImageButton android:id="@+id/global_search_back" android:layout_width="44dp" android:layout_height="44dp" android:background="@drawable/bg_icon_button" android:contentDescription="@string/back" android:padding="11dp" android:src="@drawable/ic_arrow_back" app:tint="@color/fh_primary" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:id="@+id/global_search_heading" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="@dimen/space_10" android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/global_search_back" app:layout_constraintTop_toTopOf="@id/global_search_back">
        <TextView style="@style/TextAppearance.FamilyHub.Heading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_title" android:textSize="20sp" />
        <TextView style="@style/TextAppearance.FamilyHub.Caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_subtitle" />
    </LinearLayout>
    <com.tridev.familyhub.core.ui.search.SearchBarView android:id="@+id/global_search_bar" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/global_search_back" />
    <HorizontalScrollView android:id="@+id/global_search_filter_scroll" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_8" android:scrollbars="none" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/global_search_bar">
        <com.google.android.material.chip.ChipGroup android:id="@+id/global_search_filters" android:layout_width="wrap_content" android:layout_height="wrap_content" app:selectionRequired="true" app:singleSelection="true" app:chipSpacingHorizontal="6dp">
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_all" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/global_search_all" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_family" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_family" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_reminders" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_reminders" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_finance" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_finance" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_grocery" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grocery_title" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_documents" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_documents" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_health" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_health" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_vehicles" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_vehicles" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_property" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_property" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_notes" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_notes" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_planner" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_planner" />
            <com.google.android.material.chip.Chip android:id="@+id/search_filter_vault" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_vault" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    <LinearLayout android:id="@+id/recent_search_section" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_8" android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/global_search_filter_scroll">
        <TextView style="@style/TextAppearance.FamilyHub.Caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_search_recent" android:textStyle="bold" />
        <com.google.android.material.chip.ChipGroup android:id="@+id/recent_search_chips" android:layout_width="match_parent" android:layout_height="wrap_content" app:chipSpacingHorizontal="6dp" />
    </LinearLayout>
    <ProgressBar android:id="@+id/global_search_loading" style="?android:attr/progressBarStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recent_search_section" />
    <LinearLayout android:id="@+id/global_search_empty" android:layout_width="0dp" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recent_search_section">
        <ImageView android:layout_width="52dp" android:layout_height="52dp" android:padding="10dp" android:src="@drawable/ic_search" app:tint="@color/fh_primary" />
        <TextView android:id="@+id/global_search_empty_title" style="@style/TextAppearance.FamilyHub.SectionTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_8" android:text="@string/global_search_start_title" />
        <TextView android:id="@+id/global_search_empty_detail" style="@style/TextAppearance.FamilyHub.Caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_4" android:gravity="center" android:text="@string/global_search_start_detail" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/global_search_results" android:layout_width="0dp" android:layout_height="0dp" android:clipToPadding="false" android:paddingTop="@dimen/space_8" android:paddingBottom="@dimen/space_24" android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recent_search_section" />
</androidx.constraintlayout.widget.ConstraintLayout>
